@@ -172,18 +172,24 @@ public class CloudSolrStream extends TupleStream implements Expressible {
     // collection
     expression.addParameter(collection);
     
-    // parameters
-
     ModifiableSolrParams mParams = new ModifiableSolrParams(SolrParams.toMultiMap(params.toNamedList()));
     for (Entry<String, String[]> param : mParams.getMap().entrySet()) {
-      String value = String.join(",", param.getValue());
-      
-      // SOLR-8409: This is a special case where the params contain a " character
-      // Do note that in any other BASE streams with parameters where a " might come into play
-      // that this same replacement needs to take place.
-      value = value.replace("\"", "\\\"");
 
-      expression.addParameter(new StreamExpressionNamedParameter(param.getKey(), value));
+      if(param.getKey().equals("fq")) {
+        for(String fqParam : param.getValue()) {
+          // See comment below for params containg a " character
+          expression.addParameter(new StreamExpressionNamedParameter(param.getKey(), 
+              fqParam.replace("\"", "\\\"")));
+        }
+       } else {
+        String value = String.join(",", param.getValue());
+
+        // SOLR-8409: This is a special case where the params contain a " character
+        // Do note that in any other BASE streams with parameters where a " might come into play
+        // that this same replacement needs to take place.
+        value = value.replace("\"", "\\\"");
+        expression.addParameter(new StreamExpressionNamedParameter(param.getKey(), value));
+      }
     }
     
     // zkHost
